# assumption-gate

./: .gitignore  LICENSE  README.md  assumption-decay-doctrine.md  pyproject.toml
docs/: assumption-decay-doctrine.md  design.md
examples/: email_agent_example.py
src/context_drift_gate/: __init__.py  core.py  gate.py
tests/: test_context_drift_gate.py
