[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "context-drift-gate"
version = "0.1.0"
description = "A tiny Python primitive for stopping AI/workflow execution when the operating context materially changes."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Othmane Achir"}]
keywords = ["ai", "agents", "guardrails", "governance", "workflow", "context-drift", "human-approval"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/your-username/context-drift-gate"
Repository = "https://github.com/your-username/context-drift-gate"

[tool.setuptools.packages.find]
where = ["src"]
